parser/tests/bad/ref03-2.st
% 'character' is unsubscriptable, for substrings, use 'x[n..m]' instead
%   const run-time string

var str : string
const constStr := str
var subStr := constStr[1][1]
